--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
 #banner-section {
   font-family: "Red Rose", cursive;
 }
 
 #experience-section,
-#portfolio-section {
+#portfolio-section,
+#services-section,
+#navbar,
+#workflow-section,
+#contact-section {
   font-family: "Montserrat", sans-serif;
+  box-sizing: border-box;
 }
